{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 1088,
  "lineage": "80143a0e-4284-1344-f540-4da23ca9d943",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5eea76982371e91",
            "arn": "arn:aws:ec2:us-east-1:772951946295:instance/i-0f75e051d7bd7001a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f75e051d7bd7001a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "huyn",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00968f2e2d75f1b94",
            "private_dns": "ip-10-0-1-169.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.169",
            "public_dns": "ec2-3-238-78-135.compute-1.amazonaws.com",
            "public_ip": "3.238.78.135",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-026a8f7a4c764b0e3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0350364b70115bd86"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d5a6efff193c284f",
            "tags": {
              "Name": "bastion"
            },
            "tags_all": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0350364b70115bd86"
            ]
          },
          "dependencies": [
            "aws_key_pair.auth",
            "data.aws_ami.ami_linux",
            "module.huyn_vpc.aws_security_group.this",
            "module.huyn_vpc.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.application_lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:772951946295:loadbalancer/app/demo-lb/9b2182b5ddb6e037",
            "arn_suffix": "app/demo-lb/9b2182b5ddb6e037",
            "desync_mitigation_mode": "defensive",
            "dns_name": "demo-lb-436839261.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:772951946295:loadbalancer/app/demo-lb/9b2182b5ddb6e037",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "demo-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0350364b70115bd86"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-043cb9e6600f7dcd3"
              },
              {
                "subnet_id": "subnet-0d5a6efff193c284f"
              }
            ],
            "subnets": [
              "subnet-043cb9e6600f7dcd3",
              "subnet-0d5a6efff193c284f"
            ],
            "tags": {
              "Name": "demo-lb"
            },
            "tags_all": {
              "Name": "demo-lb"
            },
            "vpc_id": "vpc-07fa0ef9a85f10ab6",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.huyn_vpc.aws_security_group.this",
            "module.huyn_vpc.aws_subnet.public_subnet",
            "module.huyn_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.application_lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:772951946295:listener/app/demo-lb/9b2182b5ddb6e037/a2ab8099793911d4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:772951946295:targetgroup/demo-tg-lb/489fa6c089f0bf91",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:772951946295:listener/app/demo-lb/9b2182b5ddb6e037/a2ab8099793911d4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:772951946295:loadbalancer/app/demo-lb/9b2182b5ddb6e037",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application_lb.aws_lb.this",
            "module.application_lb.aws_lb_target_group.this",
            "module.huyn_vpc.aws_security_group.this",
            "module.huyn_vpc.aws_subnet.public_subnet",
            "module.huyn_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.application_lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:772951946295:targetgroup/demo-tg-lb/489fa6c089f0bf91",
            "arn_suffix": "targetgroup/demo-tg-lb/489fa6c089f0bf91",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 300,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:772951946295:targetgroup/demo-tg-lb/489fa6c089f0bf91",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "demo-tg-lb",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "demo-tg-lb"
            },
            "tags_all": {
              "Name": "demo-tg-lb"
            },
            "target_type": "instance",
            "vpc_id": "vpc-07fa0ef9a85f10ab6"
          },
          "dependencies": [
            "module.application_lb.aws_lb.this",
            "module.huyn_vpc.aws_security_group.this",
            "module.huyn_vpc.aws_subnet.public_subnet",
            "module.huyn_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.huyn_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-090c3c45a565c5c55",
            "association_id": "eipassoc-0dfdd103c2ac1a18a",
            "domain": "vpc",
            "id": "eipalloc-090c3c45a565c5c55",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f1dc7591789ce238",
            "private_dns": "ip-10-0-1-43.ec2.internal",
            "private_ip": "10.0.1.43",
            "public_dns": "ec2-54-175-133-105.compute-1.amazonaws.com",
            "public_ip": "54.175.133.105",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.huyn_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:772951946295:internet-gateway/igw-0665770ffd89d8e42",
            "id": "igw-0665770ffd89d8e42",
            "owner_id": "772951946295",
            "tags": {
              "Name": "demo-igw"
            },
            "tags_all": {
              "Name": "demo-igw"
            },
            "vpc_id": "vpc-07fa0ef9a85f10ab6"
          },
          "dependencies": [
            "module.huyn_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.huyn_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-090c3c45a565c5c55",
            "connectivity_type": "public",
            "id": "nat-090810c60ad22e1ce",
            "network_interface_id": "eni-0f1dc7591789ce238",
            "private_ip": "10.0.1.43",
            "public_ip": "54.175.133.105",
            "subnet_id": "subnet-0d5a6efff193c284f",
            "tags": {
              "Name": "demo-NAT-gateway"
            },
            "tags_all": {
              "Name": "demo-NAT-gateway"
            }
          },
          "dependencies": [
            "module.huyn_vpc.aws_eip.nat",
            "module.huyn_vpc.aws_internet_gateway.this",
            "module.huyn_vpc.aws_subnet.public_subnet",
            "module.huyn_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.huyn_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:772951946295:route-table/rtb-022459fa5d8c09107",
            "id": "rtb-022459fa5d8c09107",
            "owner_id": "772951946295",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-090810c60ad22e1ce",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-rtb-private"
            },
            "tags_all": {
              "Name": "demo-rtb-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-07fa0ef9a85f10ab6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.huyn_vpc.aws_nat_gateway.this",
            "module.huyn_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.huyn_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:772951946295:route-table/rtb-0cb85f2fb27942525",
            "id": "rtb-0cb85f2fb27942525",
            "owner_id": "772951946295",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0665770ffd89d8e42",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0665770ffd89d8e42",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-rtb-public"
            },
            "tags_all": {
              "Name": "demo-rtb-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-07fa0ef9a85f10ab6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.huyn_vpc.aws_internet_gateway.this",
            "module.huyn_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.huyn_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c880fda95d17c9c2",
            "route_table_id": "rtb-022459fa5d8c09107",
            "subnet_id": "subnet-0c6a1088db1796994"
          },
          "dependencies": [
            "module.huyn_vpc.aws_eip.nat",
            "module.huyn_vpc.aws_internet_gateway.this",
            "module.huyn_vpc.aws_nat_gateway.this",
            "module.huyn_vpc.aws_route_table.rtb_private",
            "module.huyn_vpc.aws_subnet.private_subnet",
            "module.huyn_vpc.aws_subnet.public_subnet",
            "module.huyn_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8117866964fe5f9",
            "route_table_id": "rtb-022459fa5d8c09107",
            "subnet_id": "subnet-05c468bafa8342322"
          },
          "dependencies": [
            "module.huyn_vpc.aws_eip.nat",
            "module.huyn_vpc.aws_internet_gateway.this",
            "module.huyn_vpc.aws_nat_gateway.this",
            "module.huyn_vpc.aws_route_table.rtb_private",
            "module.huyn_vpc.aws_subnet.private_subnet",
            "module.huyn_vpc.aws_subnet.public_subnet",
            "module.huyn_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ceb4d91bcdcbff2",
            "route_table_id": "rtb-022459fa5d8c09107",
            "subnet_id": "subnet-073cc5a3e86e5dd71"
          },
          "dependencies": [
            "module.huyn_vpc.aws_eip.nat",
            "module.huyn_vpc.aws_internet_gateway.this",
            "module.huyn_vpc.aws_nat_gateway.this",
            "module.huyn_vpc.aws_route_table.rtb_private",
            "module.huyn_vpc.aws_subnet.private_subnet",
            "module.huyn_vpc.aws_subnet.public_subnet",
            "module.huyn_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07861b391d510fdda",
            "route_table_id": "rtb-022459fa5d8c09107",
            "subnet_id": "subnet-0ff541b840666af0b"
          },
          "dependencies": [
            "module.huyn_vpc.aws_eip.nat",
            "module.huyn_vpc.aws_internet_gateway.this",
            "module.huyn_vpc.aws_nat_gateway.this",
            "module.huyn_vpc.aws_route_table.rtb_private",
            "module.huyn_vpc.aws_subnet.private_subnet",
            "module.huyn_vpc.aws_subnet.public_subnet",
            "module.huyn_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.huyn_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c540a71d2d34e1c",
            "route_table_id": "rtb-0cb85f2fb27942525",
            "subnet_id": "subnet-0d5a6efff193c284f"
          },
          "dependencies": [
            "module.huyn_vpc.aws_internet_gateway.this",
            "module.huyn_vpc.aws_route_table.rtb_public",
            "module.huyn_vpc.aws_subnet.public_subnet",
            "module.huyn_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e077ecdff19fd3af",
            "route_table_id": "rtb-0cb85f2fb27942525",
            "subnet_id": "subnet-043cb9e6600f7dcd3"
          },
          "dependencies": [
            "module.huyn_vpc.aws_internet_gateway.this",
            "module.huyn_vpc.aws_route_table.rtb_public",
            "module.huyn_vpc.aws_subnet.public_subnet",
            "module.huyn_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.huyn_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:772951946295:security-group/sg-0350364b70115bd86",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0350364b70115bd86",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "demo-sg",
            "name_prefix": "",
            "owner_id": "772951946295",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-sg"
            },
            "tags_all": {
              "Name": "demo-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07fa0ef9a85f10ab6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.huyn_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.huyn_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:772951946295:subnet/subnet-0c6a1088db1796994",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6a1088db1796994",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "772951946295",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_subnet 0"
            },
            "tags_all": {
              "Name": "Private_subnet 0"
            },
            "vpc_id": "vpc-07fa0ef9a85f10ab6"
          },
          "dependencies": [
            "module.huyn_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:772951946295:subnet/subnet-05c468bafa8342322",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c468bafa8342322",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "772951946295",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_subnet 1"
            },
            "tags_all": {
              "Name": "Private_subnet 1"
            },
            "vpc_id": "vpc-07fa0ef9a85f10ab6"
          },
          "dependencies": [
            "module.huyn_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:772951946295:subnet/subnet-073cc5a3e86e5dd71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073cc5a3e86e5dd71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "772951946295",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_subnet 2"
            },
            "tags_all": {
              "Name": "Private_subnet 2"
            },
            "vpc_id": "vpc-07fa0ef9a85f10ab6"
          },
          "dependencies": [
            "module.huyn_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:772951946295:subnet/subnet-0ff541b840666af0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff541b840666af0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "772951946295",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_subnet 3"
            },
            "tags_all": {
              "Name": "Private_subnet 3"
            },
            "vpc_id": "vpc-07fa0ef9a85f10ab6"
          },
          "dependencies": [
            "module.huyn_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.huyn_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:772951946295:subnet/subnet-0d5a6efff193c284f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5a6efff193c284f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "772951946295",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_subnet 0"
            },
            "tags_all": {
              "Name": "Public_subnet 0"
            },
            "vpc_id": "vpc-07fa0ef9a85f10ab6"
          },
          "dependencies": [
            "module.huyn_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:772951946295:subnet/subnet-043cb9e6600f7dcd3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043cb9e6600f7dcd3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "772951946295",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_subnet 1"
            },
            "tags_all": {
              "Name": "Public_subnet 1"
            },
            "vpc_id": "vpc-07fa0ef9a85f10ab6"
          },
          "dependencies": [
            "module.huyn_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.huyn_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:772951946295:vpc/vpc-07fa0ef9a85f10ab6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ebd46d2e4a4890e4",
            "default_route_table_id": "rtb-04fd9a7eae2375791",
            "default_security_group_id": "sg-0c2e1eeaee5486471",
            "dhcp_options_id": "dopt-030f1844e5bb38564",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07fa0ef9a85f10ab6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04fd9a7eae2375791",
            "owner_id": "772951946295",
            "tags": {
              "Name": "demo-vpc"
            },
            "tags_all": {
              "Name": "demo-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rds_db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:772951946295:security-group/sg-0c1d039efc72bb151",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c1d039efc72bb151",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "demo-db-sg",
            "name_prefix": "",
            "owner_id": "772951946295",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-db-sg"
            },
            "tags_all": {
              "Name": "demo-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07fa0ef9a85f10ab6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.huyn_vpc.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}